prevent scrollbar from reducing width of the MSA container

--- a/app/assets/styles/tools.scss
+++ b/app/assets/styles/tools.scss
@@ -142,11 +142,7 @@
 }
 
 .biojs_msa_labelblock {
-  overflow-y: scroll !important;
-}
-
-.logo_container {
-  padding-left: 5px !important;
+  overflow-y: overlay !important;
 }
 
 .biojs_msa_labelrow {
